--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
   <script src="js/constants.js"></script>
   <script src="js/util.js"></script>
-  <script src="js/xhr.js"></script>
+  <script src="js/data.js"></script>
   <script src="js/picture.js"></script>
   <script src="js/preview.js"></script>
   <script src="js/form.js"></script>
